detection_of_pcb_prj/detection_of_pcb/Library/Include/C154.bas

Attribute VB_Name = "c154"
'  Copyright (C) 1995-2009 Adlink Technology INC.
'  All rights reserved.
Option Explicit
'
'  System Section 6.3
Declare Function c154_initial Lib "C154.dll" (CardID_InBit As Integer, ByVal Manual_ID As Integer) As Integer
Declare Function c154_close Lib "C154.dll" () As Integer
Declare Function c154_get_version Lib "C154.dll" (ByVal CardId As Integer, firmware_ver As Integer, driver_ver As Long, dll_ver As Long) As Integer
Declare Function c154_set_security_key Lib "C154.dll" (ByVal CardId As Integer, ByVal old_secu_code As Integer, ByVal new_secu_code As Integer) As Integer
Declare Function c154_check_security_key Lib "C154.dll" (ByVal CardId As Integer, ByVal secu_code As Integer) As Integer
Declare Function c154_reset_security_key Lib "C154.dll" (ByVal CardId As Integer) As Integer
Declare Function c154_config_from_file Lib "C154.dll" () As Integer
'
' Pulse Input/Output Configuration Section 6.4
Declare Function c154_set_pls_outmode Lib "C154.dll" (ByVal AxisNo As Integer, ByVal pls_outmode As Integer) As Integer
Declare Function c154_set_pls_iptmode Lib "C154.dll" (ByVal AxisNo As Integer, ByVal pls_iptmode As Integer, ByVal pls_logic As Integer) As Integer
Declare Function c154_set_feedback_src Lib "C154.dll" (ByVal AxisNo As Integer, ByVal Src As Integer) As Integer
'
' Velocity mode motion Section 6.5
Declare Function c154_tv_move Lib "C154.dll" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function c154_sv_move Lib "C154.dll" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal SVacc As Double) As Integer
Declare Function c154_sd_stop Lib "C154.dll" (ByVal AxisNo As Integer, ByVal Tdec As Double) As Integer
Declare Function c154_emg_stop Lib "C154.dll" (ByVal AxisNo As Integer) As Integer
Declare Function c154_get_current_speed Lib "C154.dll" (ByVal AxisNo As Integer, speed As Double) As Integer
Declare Function c154_speed_override Lib "C154.dll" (ByVal CAxisNo As Integer, ByVal NewVelPercent As Double, ByVal Time As Double) As Integer
Declare Function c154_set_max_override_speed Lib "C154.dll" (ByVal AxisNo As Integer, ByVal OvrdSpeed As Double, ByVal Enable As Integer) As Integer
'
' Single Axis Position Mode Section 6.6
Declare Function c154_start_tr_move Lib "C154.dll" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function c154_start_ta_move Lib "C154.dll" (ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function c154_start_sr_move Lib "C154.dll" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function c154_start_sa_move Lib "C154.dll" (ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function c154_set_move_ratio Lib "C154.dll" (ByVal AxisNo As Integer, ByVal move_ratio As Double) As Integer
'
' Linear Interpolated Motion Section 6.7
'  Two Axes Linear Interpolation function
Declare Function c154_start_tr_move_xy Lib "C154.dll" (ByVal CardId As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function c154_start_tr_move_zu Lib "C154.dll" (ByVal CardId As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function c154_start_ta_move_xy Lib "C154.dll" (ByVal CardId As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function c154_start_ta_move_zu Lib "C154.dll" (ByVal CardId As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function c154_start_sr_move_xy Lib "C154.dll" (ByVal CardId As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function c154_start_sr_move_zu Lib "C154.dll" (ByVal CardId As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function c154_start_sa_move_xy Lib "C154.dll" (ByVal CardId As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function c154_start_sa_move_zu Lib "C154.dll" (ByVal CardId As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
